--- a/publications.html
+++ b/publications.html
@@ -1,17 +1,9 @@
 ---
 layout: page
-title: "About"
-description: "An introduction to my academic and professional self"
-header-img: "img/post-bg-rwd.jpg"
+title: "Publications"
+description: "Papers I have worked on"
+header-img: "img/post-bg-coffee.jpeg"
 ---
-
-<!-- English Version -->
-<div class="en post-container">
-    <blockquote><p>Always Learning.</p></blockquote>
-
-    <p>Hi, I am <strong>Shrijal Pradhan</strong>. I am currently a researcher at DLR System Engineering for Future Mobility</p>
-
-</div>
 
 <!-- Handle Language Change -->
 <script type="text/javascript">
@@ -100,4 +92,3 @@ header-img: "img/post-bg-rwd.jpg"
 </script>
 <!-- disqus 公共JS代码 end -->
 {% endif %}
-
