--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@ header-img: "img/post-bg-rwd.jpg"
     <p>Hi, I am <strong>Shrijal Pradhan</strong>. I am currently a researcher at DLR System Engineering for Future Mobility. 
         My area of research is Perception, specifically world model estimaton.
     </p>
-    <p>Before this I worked in a robotics startup where my main area of focus was on Object Detection and Tracking 
+    <p>Before this, I worked in a robotics startup where my main area of focus was on Object Detection and Tracking 
         by using Sensor Fusion. Being in a small company, there were other tasks with which I expanded my horizons 
         in the area of mobile robotics and automated driving.</p>
 
