--- a/pha.html
+++ b/pha.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title_excl: "The PHA Project"
+title-excl: "The PHA Project"
 description: "Modular Setup of a Large Scale Simulation Test Environment for Automated Driving"
 header-img: "img/post-bg-rwd.jpg"
 permalink: /pha-project/
@@ -23,7 +23,7 @@ permalink: /pha-project/
 <p>The goal of this project is to combine my work that exapands into different organisations. The idea is to create an envrionment
     for the easy setup of an autonomous drivind stack. The environment should be modular enough to allow ease in switching any
     of the individual modules within the stack. The concept would be tested in simulation, namingly in Carla which would itself be
-    a module within the stack. The driving stack in question would be Autoware Auto.
+    a module within the stack (This mean it should also be switchable). The driving stack in question would be Autoware Auto.
 </p>
 <hr>
 <h1>Articles</h1>
