--- a/publications.html
+++ b/publications.html
@@ -3,6 +3,7 @@ layout: page
 title: "Publications"
 description: "Papers I have worked on"
 header-img: "img/post-bg-coffee.jpeg"
+permalink: /publications/
 ---
 
 <!-- Handle Language Change -->
