--- a/tags.html
+++ b/tags.html
@@ -3,6 +3,7 @@ title_excl: Tags
 layout: default
 description: keep hungry keep foolish
 header-img: "img/tag-bg.jpg"
+permalink: /tags/
 ---
 
 <!-- Page Header -->
