--- a/about.html
+++ b/about.html
@@ -1,8 +1,9 @@
 ---
-layout: page
-title: "About"
+layout: default
+title: About
 description: "An introduction to my academic and professional self"
 header-img: "img/post-bg-rwd.jpg"
+permalink: /about/
 ---
 
 <!-- English Version -->
