--- a/about.html
+++ b/about.html
@@ -1,13 +1,13 @@
 ---
-layout: default
-title: About
+layout: page
+title: "About"
 description: "An introduction to my academic and professional self"
 header-img: "img/post-bg-rwd.jpg"
 permalink: /about/
 ---
 
 <!-- English Version -->
-<div class="en post-container">
+<div>
     <blockquote><p>Always Learning.</p></blockquote>
 
     <p>Hi, I am <strong>Shrijal Pradhan</strong>. I am currently a researcher at DLR System Engineering for Future Mobility. 
