--- a/about.html
+++ b/about.html
@@ -1,6 +1,6 @@
 ---
-layout: default
-title: About
+layout: page
+title: "About"
 description: "An introduction to my academic and professional self"
 header-img: "img/post-bg-rwd.jpg"
 permalink: /about/
