command for iamg

--- a/pha.html
+++ b/pha.html
@@ -26,6 +26,14 @@ permalink: /pha-project/
     a module within the stack (This mean it should also be switchable). The driving stack in question would be Autoware Auto.
 </p>
 <hr>
+<h1>Possible Future Ideas</h1>
+<p>These are ideas that not in the current plan (atleast within the [PHA Project]) 
+    but were interesting ideas founding during the research of this article:</p>
+<ul>
+    <li>Live Stick: The idea is to be able to stick a USB Stick and easily run a script (with the address of the stick of course) that 
+        installs everything required outside the docker container.</li>
+</ul>
+<hr>
 <h1>Articles</h1>
 <br>
 <!-- Articles with the Tag PHA -->
