Description of the sample

--- a/publications.html
+++ b/publications.html
@@ -6,6 +6,8 @@ header-img: "img/post-bg-coffee.jpeg"
 permalink: /publications/
 ---
 
+<p>Sadly empty right now :'(</p>
+
 <!-- Handle Language Change -->
 <script type="text/javascript">
     // get nodes
