New Images for Docker Post

--- a/pha.html
+++ b/pha.html
@@ -2,7 +2,7 @@
 layout: page
 title-excl: "The PHA Project"
 description: "Modular Setup of a Large Scale Simulation Test Environment for Automated Driving"
-header-img: "img/post-bg-rwd.jpg"
+header-img: "img/pha-main.png"
 permalink: /pha-project/
 ---
 
