--- a/pha.html
+++ b/pha.html
@@ -27,11 +27,13 @@ permalink: /pha-project/
 </p>
 <hr>
 <h1>Possible Future Ideas</h1>
-<p>These are ideas that not in the current plan (atleast within the [PHA Project]) 
-    but were interesting ideas founding during the research of this article:</p>
+<p>These are ideas that not in the current plan (atleast within the PHA Project) 
+    but were interesting ideas founding during the research of the articles:</p>
 <ul>
-    <li>Live Stick: The idea is to be able to stick a USB Stick and easily run a script (with the address of the stick of course) that 
-        installs everything required outside the docker container.</li>
+    <li>Live Stick: Create a USB Stick to easily run a script or process that 
+        installs everything required outside the docker container including the operating system.</li>
+    <li>Privileged Alternatives: Methods to pass the relevant devices without using the privileged tag.</li>
+    <li>Analysis of the Claims in the Ubuntu White Paper and of the state of snap.</li>
 </ul>
 <hr>
 <h1>Articles</h1>
