Finalize Carla Articles with Images

--- a/about.html
+++ b/about.html
@@ -2,7 +2,8 @@
 layout: page
 title: "About"
 description: "An introduction to my academic and professional self"
-header-img: "img/post-bg-rwd.jpg"
+ext-img: "https://drscdn.500px.org/photo/1089310944/q%3D80_m%3D600/v2?sig=1c19e9944e1281f1635932ab4b54a62904bfc7c61a8757d5755cb76b58ca07cf"
+color-grad: 0.5
 permalink: /about/
 ---
 
