--- a/pha.html
+++ b/pha.html
@@ -2,7 +2,7 @@
 layout: page
 title-excl: "The PHA Project"
 description: "Modular Setup of a Large Scale Simulation Test Environment for Automated Driving"
-header-img: "img/pha-main.png"
+ext-img: "https://drscdn.500px.org/photo/1089309579/q%3D80_m%3D600/v2?sig=a5430ce38e224b140a65bfe7bcfd262b780fbfccfee29d69247bd768998f4768"
 permalink: /pha-project/
 ---
 
