--- a/tags.html
+++ b/tags.html
@@ -2,12 +2,13 @@
 title_excl: Tags
 layout: default
 description: keep hungry keep foolish
-header-img: "img/tag-bg.jpg"
+ext-img: "https://drscdn.500px.org/photo/1089310945/q%3D80_m%3D600/v2?sig=d4d405dbf9370dc072cc3daf9d06c62441d30f1e97346b160a9fce7922852c21"
+color-grad: 0.5
 permalink: /tags/
 ---
 
 <!-- Page Header -->
-<header class="intro-header" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
+<header class="intro-header" style="background-image: linear-gradient(rgba(0, 0, 0, {% if page.color-grad %}{{ page.color-grad }}{% else %}{{ site.color-grad }}{% endif %}), rgba(0, 0, 0, {% if page.color-grad %}{{ page.color-grad }}{% else %}{{ site.color-grad }}{% endif %})), url('{% if page.ext-img %}{{ page.ext-img }}{% else %}{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}{% endif %}')">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
