color improvment carla

--- a/pha.html
+++ b/pha.html
@@ -3,6 +3,7 @@ layout: page
 title-excl: "The PHA Project"
 description: "Modular Setup of a Large Scale Simulation Test Environment for Automated Driving"
 ext-img: "https://drscdn.500px.org/photo/1089309579/q%3D80_m%3D600/v2?sig=a5430ce38e224b140a65bfe7bcfd262b780fbfccfee29d69247bd768998f4768"
+color-grad: 0.6
 permalink: /pha-project/
 ---
 
@@ -12,7 +13,7 @@ permalink: /pha-project/
     very motivated individuals; developing a complete robotics stack which would later expand into
     an automated driving stack. While being a part of this project, although I specialized in a particular field,
     I wanted to learn about the entire stack on a general level. For this purpose, I devised a general plan to test
-    the available stacks in a simulator. The key word would be similarity.
+    the available stacks in a simulator. The key word would be modularity.
 </p>
 <p>In the Nepal Bhasha, the language of the Newar people from the Kathmandu Valley, Pha means pig (as there is no word for
     wild boar). This name was chosen because when I devised the idea back in 2021, I told my self "I will achieve this when
