--- a/publications.html
+++ b/publications.html
@@ -2,7 +2,8 @@
 layout: page
 title: "Publications"
 description: "Papers I have worked on"
-header-img: "img/post-bg-coffee.jpeg"
+ext-img: "https://drscdn.500px.org/photo/1089371397/q%3D80_m%3D600/v2?sig=6f19071c466d58250c16515333a4dec33b5c04f2850fe7822fd975c08edbf13e"
+color-grad: 0.5
 permalink: /publications/
 ---
 
